[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/FruitingBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/RootTest.gd" type="Script" id=3]
[ext_resource path="res://textures/rockgrey1.png" type="Texture" id=5]
[ext_resource path="res://textures/fossil.png" type="Texture" id=6]
[ext_resource path="res://textures/message-youdied.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.5, 25.5 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 26.0

[node name="RootTest" type="Node2D"]
script = ExtResource( 3 )

[node name="YouDied" type="Sprite" parent="."]
visible = false
position = Vector2( 384, 96 )
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="YouDied"]
wait_time = 2.0
one_shot = true

[node name="Label" type="Label" parent="YouDied"]
margin_left = -48.0
margin_top = 48.0
margin_right = 19.0
margin_bottom = 62.0
text = "asdjhaskjd"

[node name="FruitingBody" parent="." instance=ExtResource( 1 )]

[node name="Rock" type="Area2D" parent="." groups=["item"]]
visible = false
position = Vector2( 515, 204 )

[node name="Rockgrey1" type="Sprite" parent="Rock"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock"]
position = Vector2( 1.5, -0.5 )
shape = SubResource( 2 )

[node name="Fossil" type="Area2D" parent="." groups=["item"]]
visible = false
position = Vector2( 415, 376 )

[node name="Fossil" type="Sprite" parent="Fossil"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fossil"]
position = Vector2( 5, -6 )
shape = SubResource( 3 )

[node name="Spawn" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Spawn"]
position = Vector2( 48, 144 )

[node name="Position2D2" type="Position2D" parent="Spawn"]
position = Vector2( 144, 144 )

[node name="Position2D3" type="Position2D" parent="Spawn"]
position = Vector2( 240, 144 )

[node name="Position2D4" type="Position2D" parent="Spawn"]
position = Vector2( 384, 144 )

[node name="Position2D5" type="Position2D" parent="Spawn"]
position = Vector2( 480, 144 )

[node name="Position2D6" type="Position2D" parent="Spawn"]
position = Vector2( 576, 144 )

[node name="Position2D7" type="Position2D" parent="Spawn"]
position = Vector2( 672, 144 )

[node name="Position2D8" type="Position2D" parent="Spawn"]
position = Vector2( 768, 144 )

[node name="Position2D9" type="Position2D" parent="Spawn"]
position = Vector2( 864, 144 )

[node name="Position2D11" type="Position2D" parent="Spawn"]
position = Vector2( 960, 144 )

[connection signal="timeout" from="YouDied/Timer" to="." method="_on_YouDied_Timer_timeout"]
